Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sun May  5 10:59:11 BST 2002	Riley Williams <Riley@Williams.Name>

	* After much hassle and several false starts, reverted changes
	  I'd made as part of the ANSI'fication procedure. Sorry all.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Wed May  1 23:25:40 BST 2002	Riley Williams <Riley@Williams.Name>

	* Clarified structures in various include/*/*.h header files.
	* Dealt with FIXME comment in include/linuxmt/msdos.h file.
	* Verified that all include/*/*.h header files are now clean as
	  far as `splint -strict` is concerned.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

===============================================================================

Tue Apr 30 22:17:52 EEST 2002 Harry Kalogirou <harkal@gmx.net>

	* This is ELKS 0.1.0, the first beta of ELKS!

Mon Apr 29 22:15:30 BST 2002	Riley Williams <Riley@Williams.Name>

	* Following advice from Alan Cox and Christoph Plattner,
	  corrected sys_open() entries in init/main.c and verified
	  that the said file is now clean as far as `splint -weak`
	  is concerned.

Mon Apr 29 15:18:52 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Removed the "raw keyboard mode" from the configuration,
	  since it does nothing.
	* "meta device drivers", "direct floppy", "direct HDD" and
	  "286 support" are now available only in experimental.
	* "old XT HDD support" available only in unimplemented.
	* Updated the English FAQ.

Mon Apr 29 00:49:41 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that all fs/*.c files other than fs/super.c are clean